<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:padding="20dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePicImageView"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp" />

                <ImageView
                    android:id="@+id/cameraImgView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignBottom="@+id/profilePicImageView"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginTop="-60dp"
                    android:layout_toRightOf="@+id/profilePicImageView"
                    android:padding="@dimen/_5sdp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/registerTv"
                style="@style/OnBoardingHeadingTheme"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/please_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/firstNameTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="@string/firstname_title"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registerTv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameInputLayout"
                style="@style/TextInputLayoutStyle"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/firstname_hint"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/lastNameTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="@string/lastname_title"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="00dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/lastname_hint"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="@string/email_address_title"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="0dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/phoneNoTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="@string/phone_no_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneEt"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="0dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNoTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/email_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passeordTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="Password"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneEt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passeordInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="0dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passeordTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/email_hint"
                    android:inputType="textPassword"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                style="@style/PrimaryButtonTheme"

                android:layout_marginBottom="10dp"

                android:text="@string/register"
                android:visibility="visible"
                app:layout_constraintBottom_toTopOf="@+id/loginLL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passeordInputLayout"
                app:layout_constraintVertical_bias="0.892" />

            <LinearLayout
                android:id="@+id/loginLL"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
               >

                <TextView
                    android:id="@+id/headingTv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="#8B8B9E"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/loginTv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/login"
                    android:textColor="#020334"
                    android:textSize="12sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>