<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorOnBoardingBackground"
            android:orientation="vertical">


            <TextView
                android:id="@+id/emailTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="@string/email_address_title"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="0dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/passeordTitleTv"
                style="@style/TextInputLayoutHeading"
                android:text="@string/password"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passeordInputLayout"
                style="@style/TextInputLayoutStyle"
                android:layout_marginTop="0dp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passeordTitleTv">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditTextStyle"
                    android:hint="@string/email_hint"
                    android:inputType="textPassword"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/langyageBtn"
                style="@style/PrimaryButtonTheme"
                android:layout_height="wrap_content"
                android:layout_marginTop="344dp"
                android:layout_marginBottom="10dp"
                android:text="@string/language"
                app:layout_constraintBottom_toTopOf="@+id/loginBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passeordInputLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                style="@style/PrimaryButtonTheme"
                android:layout_marginBottom="10dp"
                android:text="@string/login"
                app:layout_constraintBottom_toTopOf="@+id/socialLL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/socialLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/signupLL"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_facebook" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/signupLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/headingTv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="@string/don_have_a_account"
                    android:textColor="#8B8B9E"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/registerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/register"
                    android:textColor="#020334"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>